--- a/index.html
+++ b/index.html
@@ -30,64 +30,55 @@
   </head>
   <body>
     <div class="header">
-      <div class="wr-header container">
-        <div class="logo col-md-3 col-sm-12 col-xs-12">
-          <a class="navbar-brand" href="#">
-            <h1>MCS Blog</h1>
-          </a>
-        </div><!--END OF .LOGO-->
-        <div class="menu col-md-9 col-sm-12 col-xs-12">
-          <nav class="navbar navbar-default navbar-custom">
-            <div class="container-fluid wr-navbar">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <span class="navbar-brand visible-xs">MENU &rarr;</a>
-              </div>
+      <nav class="navbar navbar-default navbar-custom">
+        <div class="wr-navbar container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed open" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"> MCS Blog</a>
+          </div>
 
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse navbar-menu" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                  <li class="active">
-                    <a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li><a href="#">About</a></li>
-                  <li>
-                    <a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i> Gallery</a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Contact Us</a>
-                  </li>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <div class="input-group">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">
+                      <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                  </span>
+                  <input type="text" class="form-control" placeholder="Search for...">
+                </div><!-- /input-group -->
+              </li>
+              <li><a href="#">Sign In</a></li>
+              <li><a href="#">Sign Up</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-user" aria-hidden="true"></i> Joko
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">User Profile</a></li>
+                  <li><a href="#">Account Setting</a></li>
+                  <li><a href="#">Log Out</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <li>
-                    <a href="#" class="show-search"><i class="fa fa-search" aria-hidden="true"></i> Search</a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign In</a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up</a>
-                  </li>
-                </ul>
-              </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-          </nav><!--END OF .NAVBAR-->
-        </div><!--END OF .MENU-->
-        <div class="clearfix"></div>
-      </div><!--END OF .WR-HEADER-->
+              </li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
     </div><!--END OF .HEADER-->
-    
-    <div class="input-search col-md-12 col-sm-12 col-xs-12">
-      <div class="input-group-lg">
-        <input type="text" class="form-control " placeholder="Search...">
-      </div>
-    </div>
 
     <div class="opening">
       <h4><span>WELCOME</span> ON MCS'S BLOG</h4>
