rubah letak seach

--- a/single-post.html
+++ b/single-post.html
@@ -31,7 +31,7 @@
   <body>
     <div class="header">
       <nav class="navbar navbar-default navbar-custom">
-        <div class="wr-navbar container-fluid">
+        <div class="wr-navbar container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed open" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -52,16 +52,6 @@
               <li><a href="#">Contact Us</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li>
-                <div class="input-group">
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">
-                      <i class="fa fa-search" aria-hidden="true"></i>
-                    </button>
-                  </span>
-                  <input type="text" class="form-control" placeholder="Search for...">
-                </div><!-- /input-group -->
-              </li>
               <li><a href="#">Sign In</a></li>
               <li><a href="#">Sign Up</a></li>
               <li class="dropdown">
@@ -378,6 +368,17 @@
             </div>
             <div class="clearfix"></div>
           </div><!--END OF .TAGS-->
+
+          <div class="search">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                </button>
+              </span>
+              <input type="text" class="form-control" placeholder="Search...">
+            </div><!-- /input-group -->
+          </div><!--END OF .SEARCH-->
         </div><!--END OF .FEATURES-RIGHT-->
         <div class="clearfix"></div>
       </div><!--END OF .WR-FEATURES-->
