nambahin input text reply comment

--- a/single-post.html
+++ b/single-post.html
@@ -166,10 +166,15 @@
                                     <div class="comment-head">
                                         <h6 class="comment-name by-author"><a href="#">Agustin Ortiz</a></h6>
                                         <span>20m ago</span>
-                                        <i class="fa fa-reply"></i>
+                                        <a href="#input-comment-main" data-toggle="collapse">
+                                          <i class="fa fa-reply"></i>
+                                        </a>
                                     </div>
                                     <div class="comment-content">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                                    </div>
+                                    <div id="input-comment-main" class="collapse input-reply">
+                                      <input type="text" class="form-control" placeholder="Write a comment...">
                                     </div>
                                 </div>
                             </div>
@@ -183,10 +188,15 @@
                                         <div class="comment-head">
                                             <h6 class="comment-name"><a href="#">Lorena Rojero</a></h6>
                                             <span>10m ago</span>
-                                            <i class="fa fa-reply"></i>
+                                            <a href="#input-comment-reply" data-toggle="collapse">
+                                              <i class="fa fa-reply"></i>
+                                            </a>
                                         </div>
                                         <div class="comment-content">
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                                        </div>
+                                        <div id="input-comment-reply" class="collapse input-reply">
+                                          <input type="text" class="form-control" placeholder="Write a comment...">
                                         </div>
                                     </div>
                                 </li>
